<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="@color/light_pink">

    <ImageButton
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_yellow"
        app:layout_constraintBottom_toTopOf="@+id/tvWel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_return"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvWel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExit" />

    <ImageView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWel"
        app:srcCompat="@drawable/hello"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/tvRan"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/hello"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/test_btn"
        android:gravity="center"
        android:text="@string/random"
        android:textStyle="bold"
        android:textSize="20sp"
        android:drawableLeft="@drawable/ic_shuffle"
        android:backgroundTint="@color/light_yellow"/>

<TextView
    android:id="@+id/tvCode"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    app:layout_constraintTop_toBottomOf="@+id/tvRan"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:background="@drawable/test_btn"
    android:backgroundTint="@color/light_yellow"
    android:gravity="center"
    android:textStyle="bold"
    android:textSize="20sp"
    android:text="Join By Code"
    android:drawableLeft="@drawable/ic_add"/>

    <TextView
        android:id="@+id/tvBot"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/tvCode"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/test_btn"
        android:backgroundTint="@color/light_yellow"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/auto"
        android:drawableLeft="@drawable/ic_play"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/tvBot"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/test_btn"
        android:backgroundTint="@color/light_yellow"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/create"
        android:drawableLeft="@drawable/ic_play"/>

</androidx.constraintlayout.widget.ConstraintLayout>