<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".Register"
    android:background="@color/light_pink">

    <com.google.android.material.textfield.TextInputLayout
        android:theme="@style/TextLabel"
        android:id="@+id/txtInputLayoutCreateUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/mail"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:counterTextColor="@color/gray"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInputEditTextCreateUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:maxLength="50" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutCreatePassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="235dp"
        android:layout_marginEnd="19dp"
        android:hint="@string/pass"
        app:hintTextColor="@color/white"
        app:counterEnabled="true"
        app:counterTextColor="@color/gray"
        app:counterMaxLength="20"
        app:endIconMode="password_toggle"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_lock"
        >

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/txtInputEditTextCreatePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:inputType="textPassword"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    confirm-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutConfirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="325dp"
        android:layout_marginEnd="19dp"
        android:hint="@string/confirm"
        app:hintTextColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/gray"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/txtInputEditTextConfirmPassword"
            android:background="@color/gray"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/light_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/register"
        android:textColor="@color/white"

        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutConfirmPassword"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <ImageButton
        android:padding="10dp"
        android:id="@+id/imgbtnBackToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/click_to_login"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />
</androidx.constraintlayout.widget.ConstraintLayout>